some more intellij-suggested fixes