@@ -83,12 +83,16 @@ public class ModelChangeDetectorTests {
 
     }
 
+    /**
+     * Test the throttling when too many events arrive at once
+     *
+     */
     @Test
     public void shouldReloadMoviesOnEventWithThrottling(){
         // **** Test setup ****
-        List<Movie> moviesBurst1 = Arrays.asList(tremors(), halloween(), theMist());
-        List<Movie> moviesBurst2 = Arrays.asList();
-        List<Movie> moviesBurst3 = Arrays.asList(decapitron());
+        List<Movie> moviesBurst1 = List.of(tremors(), halloween(), theMist());
+        List<Movie> moviesBurst2 = List.of();
+        List<Movie> moviesBurst3 = List.of(decapitron());
 
         //when(movieService.findAllPlannedInSession()).thenReturn(
         when(movieService.findAll()).thenReturn(
@@ -111,7 +115,7 @@ public class ModelChangeDetectorTests {
                 (evt) -> changeDetector.onMoviesChanged(evt),
                 // sorry to break the abstraction,
                 // but I need to complete that flux
-                () -> { completeSink("movieEvtFlux"); }
+                () -> completeSink("movieEvtFlux")
         );
 
         // ******* our verifying steps *******
@@ -125,6 +129,10 @@ public class ModelChangeDetectorTests {
                     .verifyComplete();
     }
 
+    /*
+     * hacky way to complete a sink
+     * @param sinkName
+     */
     @SneakyThrows
     private void completeSink(String sinkName) {
         Field sinkField = ModelChangeDetector.class.getDeclaredField("movieEvtFlux");
